--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,6 +21,7 @@
             await fetch('http://localhost:8080/removeIP/' + ip)
             const a = document.getElementById(ip + "_main");
             a.remove();
+            window.location.reload(true); 
         }
         
         async function aaa() {
